--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "aws": "0.0.3-2",
@@ -24,5 +26,8 @@
     "passport-auth0": "^0.6.0",
     "sdk": "^0.5.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "cypress": "^3.0.2"
   }
 }
